# spook

./: .gitignore  LICENSE  README.md  meson.build  spook.sln
include/: spook.hpp
spook/: cpp.hint  pch.cpp  pch.h  spook.cpp  spook.vcxproj  spook.vcxproj.filters
spook/Test/: cmath_test.hpp  functional_test.hpp
subprojects/: doctest.wrap
test/: spook_test.cpp
test/testheader/: bit.hpp  bit_test.hpp  cmath_test.hpp  dft_test.hpp  functional_test.hpp  numelic_test.hpp
